<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_mitra">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="326dp"

        android:layout_height="49dp"
        android:layout_marginBottom="168dp"
        android:text="Daftar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="326dp"
        android:layout_height="49dp"
        android:layout_marginTop="236dp"
        android:background="#F3F3F3"
        android:ems="10"
        android:hint="@string/register_mitra"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress4"
        android:layout_width="326dp"
        android:layout_height="49dp"
        android:layout_marginTop="304dp"
        android:background="#F3F3F3"
        android:ems="10"
        android:hint="@string/register_email_mitra"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress5"
        android:layout_width="326dp"
        android:layout_height="49dp"
        android:layout_marginTop="372dp"
        android:background="#F3F3F3"
        android:ems="10"
        android:text="@string/register_mitra_password"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress6"
        android:layout_width="326dp"
        android:layout_height="49dp"
        android:layout_marginTop="440dp"
        android:background="#F3F3F3"
        android:ems="10"
        android:hint="Enter Market Name"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="Register"
        android:textColor="#1E97B2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="290dp"
        android:layout_height="25dp"
        android:gravity="left"
        android:text="Create Your Market Account"
        android:textColor="#1E97B2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="281dp"
        android:layout_height="55dp"
        android:gravity="left"
        android:text="Buat akun tokomu sendiri biar bisa dapet banyak Benefit"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

</androidx.constraintlayout.widget.ConstraintLayout>