<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".schedule_pickup">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline83"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline84"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline64"
        app:layout_constraintEnd_toStartOf="@+id/guideline65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tanda_panah" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="237dp"
        android:layout_height="32dp"
        android:layout_margin="10dp"
        android:text="Schedule A Pickup"
        android:textAlignment="center"
        android:textColor="#1E97B2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="97dp"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:text="Price Details"
        android:textAlignment="textStart"
        android:textColor="#1E97B2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline66"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline64"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="155dp"
        android:layout_height="22dp"
        android:layout_margin="10dp"
        android:text="Schedule Date"
        android:textAlignment="textStart"
        android:textColor="#1E97B2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline71" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="155dp"
        android:layout_height="22dp"
        android:layout_margin="10dp"
        android:text="Payment Method"
        android:textAlignment="textStart"
        android:textColor="#1E97B2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline79" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="155dp"
        android:layout_height="22dp"
        android:layout_margin="10dp"
        android:text="Address"
        android:textAlignment="textStart"
        android:textColor="#1E97B2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline82"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline81" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="379dp"
        android:layout_height="99dp"
        android:layout_margin="10dp"
        android:background="#F9F9F9"
        android:backgroundTint="#000000"
        android:backgroundTintMode="add"
        app:layout_constraintBottom_toTopOf="@+id/guideline71"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline66" />

    <TextView
        android:id="@+id/scheduleDateTextView"
        android:layout_width="379dp"
        android:layout_height="99dp"
        android:layout_marginTop="4dp"
        android:background="#F9F9F9"
        android:backgroundTint="#000000"
        android:backgroundTintMode="add"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline79"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline78" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="379dp"
        android:layout_height="130dp"
        android:layout_margin="10dp"
        android:background="#F9F9F9"
        android:backgroundTint="#000000"
        android:backgroundTintMode="add"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline81"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline80" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="379dp"
        android:layout_height="99dp"
        android:layout_margin="10dp"
        android:background="#F9F9F9"
        android:backgroundTint="#000000"
        android:backgroundTintMode="add"
        android:elevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline83"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline82"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Subtotal"
        android:textColor="#1E97B2"
        app:layout_constraintBottom_toTopOf="@+id/guideline72"
        app:layout_constraintEnd_toStartOf="@+id/guideline69"
        app:layout_constraintStart_toStartOf="@+id/guideline67"
        app:layout_constraintTop_toTopOf="@+id/textView39" />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_margin="5dp"
        android:text="@string/jmlh_subtotal"
        android:textColor="#1E97B2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline72"
        app:layout_constraintEnd_toStartOf="@+id/guideline77"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="@+id/textView39"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_margin="5dp"
        android:layout_marginTop="4dp"
        android:text="@string/jmlh_tax"
        android:textColor="#1E97B2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline73"
        app:layout_constraintEnd_toStartOf="@+id/guideline77"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="@+id/guideline72" />

    <TextView
        android:id="@+id/total"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="12dp"
        android:text="@string/jmlh_total"
        android:textColor="#1E97B2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView39"
        app:layout_constraintEnd_toStartOf="@+id/guideline77"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="@+id/guideline73" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Tax"
        android:textColor="#1E97B2"
        app:layout_constraintBottom_toTopOf="@+id/guideline73"
        app:layout_constraintEnd_toStartOf="@+id/guideline69"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="@+id/guideline67"
        app:layout_constraintTop_toTopOf="@+id/guideline72"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Total"
        android:textColor="#1E97B2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView39"
        app:layout_constraintEnd_toStartOf="@+id/guideline69"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="@+id/guideline67"
        app:layout_constraintTop_toTopOf="@+id/guideline73"
        app:layout_constraintVertical_bias="0.473" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Rp."
        android:textColor="#1E97B2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline72"
        app:layout_constraintEnd_toStartOf="@+id/guideline75"
        app:layout_constraintStart_toStartOf="@+id/guideline74"
        app:layout_constraintTop_toTopOf="@+id/textView39" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Rp."
        android:textColor="#1E97B2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline73"
        app:layout_constraintEnd_toStartOf="@+id/guideline75"
        app:layout_constraintStart_toStartOf="@+id/guideline74"
        app:layout_constraintTop_toTopOf="@+id/guideline72" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Rp."
        android:textColor="#FD0303"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView39"
        app:layout_constraintEnd_toStartOf="@+id/guideline75"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/guideline74"
        app:layout_constraintTop_toTopOf="@+id/guideline73"
        app:layout_constraintVertical_bias="0.421" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:text="Confirm Order"
        app:layout_constraintBottom_toTopOf="@+id/guideline84"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline83"
        app:layout_constraintVertical_bias="0.571" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05700124" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.124681935" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

</androidx.constraintlayout.widget.ConstraintLayout>